fix header letter spacing

--- a/style.css
+++ b/style.css
@@ -67,7 +67,9 @@ header {
   position: absolute;
   top: 0;
   margin-top: 16px;
-  font-size: 52px;
+  font-size: 56px;
+  letter-spacing: 4px;
+
 }
 
 /* Main Content */
@@ -102,6 +104,7 @@ header {
   margin-bottom: 8px;
 }
 #contract-title {
+  letter-spacing: 2px;
   font-family: 'corleoneDue';
   font-size: 24px;
   color: var(--primary);
@@ -113,6 +116,7 @@ header {
   justify-content: center;
   align-items: center;
   text-align: center;
+  letter-spacing: 2px;
   font-family: 'corleoneDue';
   font-size: 24px;
   padding: 0;
@@ -209,7 +213,7 @@ footer {
 /* mobile optimzations */
 @media screen and (max-width: 801px) {
   header {
-    font-size: 36px;
+    font-size: 44px;
   }
 
   #main-container {
